# rustgame

./: .editorconfig  Cargo.toml  README.md
src/: game.rs  main.rs  question.rs
