[package]
name = "rustgame"
version = "0.1.0"
authors = ["Oliver Bøving <lvrmlbvng@gmail.com>"]

[dependencies]
piston = "0.22.0"
piston2d-graphics = "0.16.0"
pistoncore-glutin_window = "0.26.0"
piston2d-opengl_graphics = "0.28.0"

[[bin]]
name = "rustgame"
path = "src/main.rs"

[[bin]]
name = "question"
path = "src/question.rs"
